--- a/index.html
+++ b/index.html
@@ -15,9 +15,53 @@
 
         </figure>
         <h1>Bem Vindo</h1>
-
-
     </header>
+    <main>
+        <h2>Cardápio do Dia 10/07/2025</h2>
+        <h3>Quinta-Feira:</h3>
+        <section>
+            <h4>Almoço</h4>
+            <div class="refeicao">
+            <ul>
+                <li>Arroz</li>
+                <li>Macarrão</li>
+                <li>Feijao</li>
+                <li>Ovos Cozidos</li>
+                <li>Bebida:<span>Limonada</span></li>
+                <li>Sobremesa:<span>Torta Doce</span></li>
+            </ul>
+            <figure>
+                <img src="/img/almoço.png" alt="Prato de Arroz,Feijão,Bife de Boi,Macarrão,Limonada">
+            </figure>
+           </div>
+        </section>      
+        <section>
+            <h4>Lanche da Tarde</h4>
+            <div class="refeicao">
+            <ul>
+                <li>Pão com Queijo</li>
+                <li>Bebida:<span>Limonada</span></li>
+            </ul>
+            <figure>
+                <img src="/img/cafe.png" alt="Biscoito com Limonada">
+            </figure>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <form>
+            <h3>Você ira particpar da refeição hoje?</h3>
+            <div>
+                <label>
+                    <input type="radio" name="Resposta" value="Sim">Sim
+                </label>
+                <label>
+                    <input type="radio" name="Resposta" value="Não">Não
+                </label>
+            </div>
+        </form>
+        <P>Desenvolvido por : <span>João Gabriel</span></p>
+    </footer>
 </body>
 
 </html>
