--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>Sobremesa:<span>Torta Doce</span></li>
             </ul>
             <figure>
-                <img src="/img/almoço.png" alt="Prato de Arroz,Feijão,Bife de Boi,Macarrão,Limonada">
+                <img src="./img/almoço.png" alt="Prato de Arroz,Feijão,Bife de Boi,Macarrão,Limonada">
             </figure>
            </div>
         </section>      
@@ -43,7 +43,7 @@
                 <li>Bebida:<span>Limonada</span></li>
             </ul>
             <figure>
-                <img src="/img/cafe.png" alt="Biscoito com Limonada">
+                <img src="./img/cafe.png" alt="Biscoito com Limonada">
             </figure>
             </div>
         </section>
